criação do módulo de professor

--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -55,7 +55,7 @@
                     <div class="three">
                         <div class="field">
                             <span>Data de Nascimento</span>
-                            <span class="campo">{{ tratarString(element.dataMatriculaStr) }}</span>
+                            <span class="campo">{{ tratarString(element.dataNascimentoStr) }}</span>
                         </div>
                     </div>
                     <div class="three">
