--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -24,6 +24,10 @@
                 <mat-icon aria-hidden="false">school</mat-icon>
                 <span>Turma</span>
             </a>
+            <a class="menu-item" (mouseover)="desenhar('in')" (click)="redirecionar('professor')">
+                <mat-icon aria-hidden="false">record_voice_over</mat-icon>
+                <span>Turma</span>
+            </a>
         </section>
         <span class="version">Versão do Sistema: {{version}}</span>
     </mat-sidenav>
