crud de professor

--- a/src/app/view/professor/tabela-professor/tabela-professor.component.html
+++ b/src/app/view/professor/tabela-professor/tabela-professor.component.html
@@ -4,13 +4,13 @@
             <ng-template let-element customTemplate="acoesTemplate">
                 <div style="text-align: end;">
                     <button mat-icon-button color="primary"
-                            matTooltip="Gerenciar Turma"
-                            (click)="editarTurma(element)">
+                            matTooltip="Editar Professor"
+                            (click)="editarProfessor(element)">
                         <i class="material-icons">edit</i>
                     </button>
                     <button mat-icon-button color="primary"
-                            matTooltip="Excluir Turma"
-                            (click)="excluirTurma(element)">
+                            matTooltip="Excluir Professor"
+                            (click)="excluirProfessor(element)">
                         <i class="material-icons">delete</i>
                     </button>
                 </div>
