--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -26,7 +26,7 @@
             </a>
             <a class="menu-item" (mouseover)="desenhar('in')" (click)="redirecionar('professor')">
                 <mat-icon aria-hidden="false">record_voice_over</mat-icon>
-                <span>Turma</span>
+                <span>Professor</span>
             </a>
         </section>
         <span class="version">Versão do Sistema: {{version}}</span>
