--- a/src/app/view/professor/formulario-professor/formulario-professor.component.html
+++ b/src/app/view/professor/formulario-professor/formulario-professor.component.html
@@ -1,1 +1,68 @@
-<p>formulario-professor works!</p>
+<div class="formulario">
+    <div class="header">
+        <div class="six">
+            <h1>{{isEdicao ? 'Editar' : 'Cadastro de'}} professor</h1>
+        </div>
+        <div class="six buttons">
+            <button mat-raised-button color="accent" (click)="voltar()">Voltar</button>
+            <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
+        </div>
+    </div>
+    <mat-card>
+        <div class="form-grid">
+            <mat-form-field class="six">
+                <mat-label>Nome:</mat-label>
+                <input matInput [(ngModel)]="element.nome">
+            </mat-form-field>
+            <mat-form-field class="three">
+                <mat-label>CPF:</mat-label>
+                <input matInput [textMask]="{mask: masks.CPF}" [(ngModel)]="element.cpf">
+            </mat-form-field>
+            <mat-form-field class="three">
+                <mat-label>RG:</mat-label>
+                <input matInput [(ngModel)]="element.rg">
+            </mat-form-field>
+
+            <mat-form-field class="three">
+                <mat-label>Telefone:</mat-label>
+                <input matInput [textMask]="{mask: masks.Telefone}" [(ngModel)]="element.telefone">
+            </mat-form-field>
+            <mat-form-field class="three">
+                <mat-label>Celular:</mat-label>
+                <input matInput [textMask]="{mask: masks.Celular}" [(ngModel)]="element.celular">
+            </mat-form-field>
+            <mat-form-field class="three">
+                <mat-label>E-mail:</mat-label>
+                <input matInput [(ngModel)]="element.email">
+            </mat-form-field>
+            <mat-form-field class="three">
+                <mat-label>Formação:</mat-label>
+                <input matInput [(ngModel)]="element.formacao">
+            </mat-form-field>
+
+            <mat-form-field class="three">
+                <mat-label>CEP:</mat-label>
+                <input matInput [textMask]="{mask: masks.CEP}" [(ngModel)]="element.cep">
+                <button mat-raised-button color="accent" matSuffix (click)="buscarCep()">Buscar CEP</button>
+            </mat-form-field>
+            <mat-form-field class="six">
+                <mat-label>Endereço:</mat-label>
+                <input matInput [(ngModel)]="element.endereco">
+            </mat-form-field>
+            <mat-form-field class="three">
+                <mat-label>Complemento:</mat-label>
+                <input matInput [(ngModel)]="element.complemento">
+            </mat-form-field>
+
+            <mat-form-field class="three">
+                <mat-label>Bairro:</mat-label>
+                <input matInput [(ngModel)]="element.bairro">
+            </mat-form-field>
+            <mat-form-field class="three">
+                <mat-label>Cidade:</mat-label>
+                <input matInput [(ngModel)]="element.cidade">
+            </mat-form-field>
+
+        </div>
+    </mat-card>
+</div>
