criação de campo naturalidade de aluno

--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -83,6 +83,12 @@
                             <span class="campo">{{ getCampo('sexo', element) }}</span>
                         </div>
                     </div>
+                    <div class="three">
+                        <div class="field">
+                            <span>Naturalidade</span>
+                            <span class="campo">{{ tratarString(element.naturalidade) }}</span>
+                        </div>
+                    </div>
                     <div class="six">
                         <div class="field">
                             <span>Nome do Pai</span>
