--- a/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
+++ b/src/app/view/aluno/formulario-aluno/formulario-aluno.component.html
@@ -56,6 +56,10 @@
                             <mat-option value="f">Feminino</mat-option>
                         </mat-select>
                     </mat-form-field>
+                    <mat-form-field class="four">
+                        <mat-label>Naturalidade:</mat-label>
+                        <input matInput [(ngModel)]="element.naturalidade">
+                    </mat-form-field>
                 </div>
             </div>
             <mat-form-field class="six">
