--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,7 +140,7 @@ button:hover {
         }
     }
     .mat-expansion-panel-body {
-        padding: 25px;
+        padding: 15px 25px;
         .menu-secao > a {
             height: 30px;
             font-size: 16px;
