listagem de usuários e formulário de criação

--- a/src/app/view/usuario/tabela-usuario/tabela-usuario.component.html
+++ b/src/app/view/usuario/tabela-usuario/tabela-usuario.component.html
@@ -1,1 +1,20 @@
-<p>tabela-usuario works!</p>
+<div class="tabela">
+    <mat-card>
+        <custom-table [columns]="columns" [listOfElements]="list" [maxHeigth]='heigthTabela'>
+            <ng-template let-element customTemplate="acoesTemplate">
+                <div style="text-align: end;">
+                    <button mat-icon-button color="primary"
+                            matTooltip="Gerenciar Turma"
+                            (click)="editarUsuario(element)">
+                        <i class="material-icons">edit</i>
+                    </button>
+                    <button mat-icon-button color="primary"
+                            matTooltip="Excluir Turma"
+                            (click)="excluirUsuario(element)">
+                        <i class="material-icons">delete</i>
+                    </button>
+                </div>
+            </ng-template>
+        </custom-table>
+    </mat-card>
+</div>
