--- a/src/app/view/usuario/usuario-menu.component.html
+++ b/src/app/view/usuario/usuario-menu.component.html
@@ -9,8 +9,8 @@
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioUsuario'] } }]" (click)="mudarRota()">
                 <mat-icon>person_add</mat-icon><span>Adicionar Usuario</span>
             </a>
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: [''] } }]" (click)="mudarRota()">
-                <mat-icon>list</mat-icon><span>Pesquisar Turmas</span>
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['tabelaUsuario'] } }]" (click)="mudarRota()">
+                <mat-icon>list</mat-icon><span>Pesquisar Usuários</span>
             </a>
         </div>
     </mat-expansion-panel>
