--- a/src/app/view/usuario/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/view/usuario/formulario-usuario/formulario-usuario.component.html
@@ -51,4 +51,17 @@
             </div>
         </div>
     </mat-card>
+    <mat-card *ngIf="!isEdicao">
+        <div class="form-grid">
+            <mat-form-field class="four">
+                <mat-label>Senha:</mat-label>
+                <input matInput [(ngModel)]="senha" type="password">
+            </mat-form-field>
+            <mat-form-field class="four">
+                <mat-label>Repita a Senha:</mat-label>
+                <input matInput [(ngModel)]="senha2" type="password">
+            </mat-form-field>
+
+        </div>
+    </mat-card>
 </div>
