criação de component de nota de aluno

--- a/src/app/view/turma/formulario-turma/formulario-turma.component.html
+++ b/src/app/view/turma/formulario-turma/formulario-turma.component.html
@@ -18,6 +18,10 @@
                     <mat-icon>check</mat-icon>
                     <span>Finalizar</span>
                 </button>
+                <button mat-menu-item (click)="editarNotas()">
+                    <mat-icon>list_alt</mat-icon>
+                    <span>Lançar Notas</span>
+                </button>
 
             </mat-menu>
         </div>
