--- a/src/app/view/turma/notas-turma/notas-turma.component.html
+++ b/src/app/view/turma/notas-turma/notas-turma.component.html
@@ -3,9 +3,15 @@
         <div class="six">
             <h1>Lançar Notas da Turma</h1>
         </div>
-    </div>
-    <mat-card>
-        <div class="form-grid">
+        <div class="six buttons">
+            <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
+            <button mat-raised-button color="accent" (click)="voltar()">Voltar</button>
         </div>
-    </mat-card>
+    </div>
+    <div class="tabela">
+        <mat-card>
+            <custom-table [columns]="columns" [listOfElements]="list">
+            </custom-table>
+        </mat-card>
+    </div>    
 </div>
