modal de adição de nota

--- a/src/app/view/turma/notas-turma/notas-turma.component.html
+++ b/src/app/view/turma/notas-turma/notas-turma.component.html
@@ -4,8 +4,8 @@
             <h1>Lançar Notas da Turma</h1>
         </div>
         <div class="six buttons">
-            <button mat-raised-button color="primary" (click)="salvar()">Salvar</button>
             <button mat-raised-button color="accent" (click)="voltar()">Voltar</button>
+            <button mat-raised-button color="primary" (click)="adicionar()"><mat-icon>add</mat-icon>Adicionar Nota</button>
         </div>
     </div>
     <div class="tabela">
