--- a/src/app/view/turma/turma-professor/turma-professor.component.html
+++ b/src/app/view/turma/turma-professor/turma-professor.component.html
@@ -4,7 +4,7 @@
     </div>
     <mat-card>
         <div class="form-grid">
-            <div class="six">
+            <div class="twelve">
                 <custom-select label="Professor:" field="nome" [options]="professoressOptions" [(selected)]="professorSelecionado">
                 </custom-select>
             </div>
