--- a/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
+++ b/src/app/view/aluno/ficha-aluno/ficha-aluno.component.html
@@ -29,6 +29,10 @@
                     <mat-icon>print</mat-icon>
                     <span>Imprimir</span>
                 </button>
+                <button mat-menu-item (click)="cracha()" *ngIf="element.turmasAluno.length > 0">
+                    <mat-icon>portrait</mat-icon>
+                    <span>Crachá</span>
+                </button>
             </mat-menu>
 
         </div>
@@ -250,3 +254,14 @@
         </mat-tab>
     </mat-tab-group>
 </div>
+<ng-template #turmaCrachaTemplate>
+    <div class="form-grid" style="display: flex;">
+        <div class="twelve form-field" style="height: 50px;">
+            <mat-radio-group aria-label="Select an option" [(ngModel)]="turmaCrachaSelecionada">
+                <mat-radio-button [value]="option" *ngFor="let option of turmaCrachaOptions">
+                    {{ option.turma.codigo }}
+                </mat-radio-button>
+            </mat-radio-group>
+        </div>
+    </div>
+</ng-template>
