tabela de alunos proximos do vencimento

--- a/src/app/view/painel-geral/painel-geral.component.html
+++ b/src/app/view/painel-geral/painel-geral.component.html
@@ -1,5 +1,12 @@
 <div class="form-grid">
-    <mat-card class="six">
-        <calculadora></calculadora>
-    </mat-card>
+    <div class="six">
+        <mat-card>
+            <calculadora></calculadora>
+        </mat-card>
+    </div>
+    <div class="six">
+        <mat-card>
+            <vencimento-aluno></vencimento-aluno>
+        </mat-card>
+    </div>
 </div>
