--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -28,6 +28,10 @@
                 <mat-icon aria-hidden="false">record_voice_over</mat-icon>
                 <span>Professor</span>
             </a>
+            <a class="menu-item" (mouseover)="desenhar('in')" (click)="redirecionar('financeiro')">
+                <mat-icon aria-hidden="false">payments</mat-icon>
+                <span>Financeiro</span>
+            </a>
             <a class="menu-item" (mouseover)="desenhar('in')" (click)="redirecionar('usuario')">
                 <mat-icon aria-hidden="false">manage_accounts</mat-icon>
                 <span>Usuário</span>
