tela de busca por boleto

--- a/src/app/view/financeiro/consulta-boleto/consulta-boleto.component.html
+++ b/src/app/view/financeiro/consulta-boleto/consulta-boleto.component.html
@@ -9,5 +9,5 @@
         </div> -->
     </div>
     <filtro-boleto [filtro]="filtro" (pesquisar)="pesquisar($event)"></filtro-boleto>
-    <tabela-aluno [pageList]="pageList" (pesquisar)="pesquisar()" (paginar)="paginar($event)" (exportar)="exportarPesquisa()"></tabela-tabela>
+    <tabela-boleto [pageList]="pageList" (pesquisar)="pesquisar()" (paginar)="paginar($event)" (exportar)="exportarPesquisa()"></tabela-boleto>
 </div>
