--- a/src/app/view/financeiro/financeiro-menu.component.html
+++ b/src/app/view/financeiro/financeiro-menu.component.html
@@ -6,7 +6,7 @@
             </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
-            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioTurma'] } }]" (click)="mudarRota()">
+            <a class="two" [routerLink]="['', { outlets: { secondRouter: ['consultaBoleto'] } }]" (click)="mudarRota()">
                 <mat-icon>person_add</mat-icon><span>Consultar Boletos</span>
             </a>
         </div>
