--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,13 +13,6 @@ body {
         .formulario,
         .pesquisa,
         .tabela {
-            h1 {
-                font-weight: 800;
-                font-family: "Roboto-Black";
-                color: $primary;
-                text-transform: uppercase;
-                margin: 10px 5px;
-            }
             .mat-card {
                 margin-bottom: 20px;
                 box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
@@ -50,6 +43,13 @@ body {
         text-decoration: unset;
         color: unset;
     }
+}
+
+h1 {
+    font-family: "Roboto-Black"!important;
+    color: $primary;
+    text-transform: uppercase;
+    margin: 10px 5px;
 }
 
 .mat-sidenav-container {
