--- a/src/app/view/financeiro/financeiro-menu.component.html
+++ b/src/app/view/financeiro/financeiro-menu.component.html
@@ -2,7 +2,7 @@
     <mat-expansion-panel [(expanded)]='expanded'>
         <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'50px'">
             <mat-panel-title>
-                Turma
+                Financeiro
             </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
