--- a/src/app/view/financeiro/tabela-boleto/tabela-boleto.component.html
+++ b/src/app/view/financeiro/tabela-boleto/tabela-boleto.component.html
@@ -9,16 +9,12 @@
                             *ngIf="element.status=='Em Aberto'">
                         <mat-icon>calculate</mat-icon>
                     </button>
-                    <!-- <button mat-icon-button color="primary"
-                            matTooltip="Editar Aluno"
-                            (click)="editarAluno(element)">
-                        <i class="material-icons">edit</i>
-                    </button>
                     <button mat-icon-button color="primary"
-                            matTooltip="Excluir Aluno"
-                            (click)="excluirAluno(element)">
-                        <i class="material-icons">delete</i>
-                    </button> -->
+                            matTooltip="Alterar Situação"
+                            (click)="alterarSituacao(element)"
+                            *ngIf="element.status!='Liquidado'">
+                        <mat-icon>edit</mat-icon>
+                    </button>
                 </div>
             </ng-template>
         </custom-table>
