--- a/src/app/view/turma/turma-menu.component.html
+++ b/src/app/view/turma/turma-menu.component.html
@@ -7,7 +7,7 @@
         </mat-expansion-panel-header>
         <div class="form-grid menu-secao">
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['formularioTurma'] } }]" (click)="mudarRota()">
-                <mat-icon>person_add</mat-icon><span>Adicionar Turma</span>
+                <mat-icon>school</mat-icon><span>Adicionar Turma</span>
             </a>
             <a class="two" [routerLink]="['', { outlets: { secondRouter: ['pesquisarTurma'] } }]" (click)="mudarRota()">
                 <mat-icon>list</mat-icon><span>Pesquisar Turmas</span>
