tela de adicionar boleto e leitura de arquivos

--- a/src/app/view/financeiro/adicionar-boleto/adicionar-boleto.component.html
+++ b/src/app/view/financeiro/adicionar-boleto/adicionar-boleto.component.html
@@ -11,12 +11,13 @@
     <mat-card>
         <div class="form-grid">
             <div class="six" >
-                <custom-select label='Aluno:'
-                               field='nomeMatricula'
-                               [options]="alunosOptions"
-                               [(selected)]="alunoSelecionado"
-                               (filter)="pesquisarAluno($event)">
-                </custom-select>
+                <custom-autocomplete 
+                    label='Aluno:'
+                    field='nomeMatricula'
+                    [options]="alunosOptions"
+                    [(selected)]="alunoSelecionado"
+                    (filter)="pesquisarAluno($event)">
+                </custom-autocomplete>
             </div>
             <mat-form-field class="three" >
                 <mat-label>Número:</mat-label>
